# edge

./: .editorconfig  .gitignore  LICENSE  README.md  TODO.md  analyzer  analyzer.py  config.lua.default  main.lua  pyproject.toml
action/: menu.lua  walk.lua
ai/: battle.lua  sequence.lua
util/: bridge.lua  dialog.lua  flags.lua  game.lua  input.lua  log.lua  memory.lua  route.lua
