[tool.poetry]
name = "edge"
version = "0.0.9"
description = ""
authors = ["Jason Lynch <jason@calindora.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
