[tool.poetry]
name = "edge"
version = "0.0.9"
description = ""
authors = ["Jason Lynch <jason@calindora.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.22.2"
scipy = "^1.11.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
