[tool.poetry]
name = "edge"
version = "0.0.9"
description = ""
authors = ["Jason Lynch <jason@calindora.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.4"
scipy = "^1.13.1"
matplotlib = "^3.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
